--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
     "moment": "^2.29.4",
